--- a/src/app/students/students-dashboard/students-dashboard.component.scss
+++ b/src/app/students/students-dashboard/students-dashboard.component.scss
@@ -9,10 +9,11 @@
         height: 100%;
         padding: 20px;
         
-        .container-fluid{
+        .container{
             border-radius: 20px;
             background-color: var(--white);
             color: var(--black);
+            min-width: 100%;
         }
     }
 }
